# RECITALS-anonymization-manager

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  Improvements.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yaml  tests.yml
ANJANA/anonymized_data/: adult_k10_l2_t0.5.csv
ANJANA/sample_templates/: l_diversity.json
DP/: requirements.txt
JSON Templates/ANJANA/: README.md  k_anonymity.json  requirements.txt  t_closeness.json  wrapper.py
JSON Templates/ANJANA/anonymized_data/: adult_k10.csv
JSON Templates/ANJANA/templates/: k_anonymity.json  l_diversity.json  t_closeness.json
PyDP/: README.md  requirements.txt  wrapper.py
PyDP/sample_templates/: adult.json
arx/ArxAdapter/: compile.sh
arx/ArxAdapter/src/: JavaArxAdapter.java
arx/data/: age_hierarchy.csv  credit_score_hierarchy.csv  credit_scores_hierarchy.csv
arx/example_2anonymity_2diversity/: 2anonymity_example.txt  2diversity_example.txt  compile_and_run.sh  example.java  tools.java
arx/examples/: DifferentialPrivacyExample.java  KAnonymityExample.java  TClosenessExample.java
arx/template/: template.json  template_explained.md
arx_builder/: ARXAdapterServer.java  JavaArxAdapter.java  compile_adapter.sh  manifest.txt
docs/: Documentation.md  anonymization_manager.html  guide.md  index.html  index.md  links.md  literature.md  search.js
docs/anonymization_manager/: anon.html
examples/: age.csv  chatgpt_sample.csv  template.json
examples/adult/: anjana_config.json
examples/anjana_example/: anonymization_example_suppression.py  config_anjana_k-l-t.json
examples/anjana_example/results/: adult_k-10_l-2_t-0.5.csv  anonymized.csv
examples/arx_example/: anonymization_example.py  anonymization_example_suppression.py  anonymization_example_with_metrics.py  anonymization_example_with_metrics_parameterized.py  anonymization_example_with_weights.py  k_anonymity.py  k_l_t_combination.py  l-diversity.py  suppresion.py  t-closeness.py
examples/arx_example/results/: anonymized.csv
guide/: index.html
links/: index.html
literature/: index.html
old/ANJANA/: requirements.txt
old/ARX/: compile_and_run.sh
old/ARX/anonymized_data/: average_risk.csv  blikeness.csv  equal_distance_t_closeness.csv
old/ARX/data/: balance_hierarchy.csv  create_data.py  data.csv
old/ARX/examples/: AverageRiskExample.java  BLikenessExample.java  DDisclosurePrivacyExample.java  LDiversityExample.java  SampleUniquenessExample.java
old/ARX/template/: template.json
search/: search_index.json
site/: index.html
site/guide/: index.html
src/anonymization_manager/: __init__.py  anon.py  arx_adapter.py  cli.py  config.py  core.py  test.py
src/anonymization_manager/adapters/: anjana.py  arx.py
src/anonymization_manager/adapters/anjana/: anjana.py
src/anonymization_manager/adapters/arx/: arx.py  arx_adapter.py
src/anonymization_manager/example/: anonymization_example.py
src/anonymization_manager/tests/: test_arx.py  test_config.py
templates/: sample.json
tests/: common.py
tests/test_anonymization/: test_k_anonymity.py  test_k_l_models.py  test_l_diversity.py
tests/test_config/: common.py  test_attributes_validation.py  test_dataset_validation.py  test_hierarchies_validation.py  test_parameters_validation.py
tests/test_optimized_anonymization/: test_k_anonymity_with_quality_metric.py  test_k_anonymity_with_quality_metric_advanced.py  test_k_anonymity_with_weights.py  test_k_l_with_weights_metrics.py
tests/test_suppression/: test_suppression.py
